# html2md

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DEVELOPMENT_JOURNAL.md  INTEGRITY_REVIEW.md  LICENSE  README.md  SECURITY.md  config-example.json  config.json  decrypt_chrome_cookies.py  deploy.sh  encoding_flow_analysis.md  example_config_usage.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/main_content/: benchmark.py  fixtures.json
docs/: browser-rendering.md  configuration-example.md  coverage.md  deployment.md  network-security.md  output-contract.md  releasing.md
docs/adr/: 0001-defer-scale-out-crawling.md  0002-select-main-content-extraction.md
docs/internal/: INTEGRITY_REVIEW.md  README.md  ROADMAP.md  WORK_BREAKDOWN_STRUCTURE.md
extension/: README.md  THIRD_PARTY_NOTICES.md  background.js  conversion-utils.js  converter.js  logger.js  manifest.json  popup.html  popup.js  settings-store.js  styles.css  transcript-converter.js  turndown.js
extension/tests/: chromium-smoke.js  extension-regressions.test.js
scripts/: check_documentation.py  check_package_readme.py
src/: concurrent_features_summary.md
src/grab2md/cli/: cli.py  command_runtime.py  config_commands.py  conversion_service.py  runtime.py
src/grab2md/config/: backup.py  recovery.py  schema.py
src/grab2md/cookies/: browser_paths.py  chrome.py  database.py  export.py  firefox.py  http_session.py  session_manager.py
src/grab2md/markdown/: archive.py  archiving.py  batch_processor.py  converter.py  crawl_engine.py  crawler.py  pipeline.py
src/grab2md/network/: header_manager.py  image_downloader.py  rate_limiter.py  request_handler.py  robots_parser.py
src/grab2md/tests/: test_archive_model.py  test_cli_end_to_end.py  test_cli_runtime.py  test_command_runtime.py  test_config_cli.py  test_crawler_pipeline.py  test_image_downloader.py  test_license_distribution.py  test_parser.py  test_rate_limiter.py  test_security_boundaries.py  test_sequential_request_policy.py  test_state_manager.py  test_state_schema.py
src/grab2md/utils/: crawl_policy.py  formatter.py  logger.py  parser.py  redaction.py  state_manager.py  state_schema.py  state_store.py
src/html2md/: __init__.py  errors.py  generate.sh  html2md
src/html2md/cli/: cli.py  config_commands.py  conversion_presenter.py  conversion_service.py  main.py  modern_ui.py  presentation.py  runtime.py  state_commands.py
src/html2md/config/: backup.py  config.json  loader.py  recovery.py  schema.py  writer.py
src/html2md/cookies/: chrome_loader.py  http_session.py  session_manager.py
src/html2md/markdown/: archive.py  batch_processor.py  content_extractor.py  converter.py  crawl_engine.py  crawler.py  link_rewriter.py  markdown_links.py  pipeline.py  trimmer.py
src/html2md/network/: auth_inputs.py  browser_renderer.py  chatgpt_handler.py  concurrent_limiter.py  header_manager.py  image_downloader.py  openai_api_handler.py  rate_limiter.py  request_handler.py  request_scheduler.py  robots_parser.py  safe_http.py
src/html2md/tests/: test_archive_model.py  test_auth_inputs.py  test_batch_processor.py  test_browser_renderer.py  test_browser_renderer_e2e.py  test_cli_end_to_end.py  test_cli_runtime.py  test_compression_integration.py  test_config_cli.py  test_content_extractor.py  test_conversion_service.py  test_converter.py  test_cookie_loader.py  test_crawler_pipeline.py  test_failure_contracts.py  test_header_manager.py  test_image_downloader.py  test_license_distribution.py  test_link_rewriter.py  test_page_pipeline.py  test_parser.py  test_presentation.py  test_request_handler.py  test_robots_parser.py  test_safe_http.py  test_security_boundaries.py  test_sequential_request_policy.py  test_signal_handling.py  test_ssl_verification.py  test_state_integration.py  test_state_manager.py  test_state_schema.py
src/html2md/utils/: formatter.py  logger.py  parser.py  path_safety.py  progress_display.py  redaction.py  secure_files.py  state_manager.py  state_schema.py  state_store.py
test_image_download/: README.md
testing/: converted.md  original.html
testing/original_files/: 08841a3f-9f1c-4a2d-b8dd-bb58762cbffa.png:Zone.Identifier  0c600b9e-1ac3-4ba2-8c4c-39e24554eed7.png:Zone.Identifier  26717a12-31fe-4bb1-a6b6-83420d45106b.png:Zone.Identifier  39e9a63a-ebdb-4b77-9d49-5fd3062c332f.png:Zone.Identifier  4106c552-a718-4702-b91f-bfd27dadf542.png:Zone.Identifier  5391088b-3515-4f3b-9d2f-02b12ecd6dfb.png:Zone.Identifier  637c45ea-f6e5-44de-8246-6b30d6542df4.png:Zone.Identifier  6cd4e4e9-b073-46a6-bc6c-51f259d7d6a8.png:Zone.Identifier  6d904efa-87ff-4628-83c8-54fbb82bf655.png:Zone.Identifier  8f0421fd-b890-441a-bb3a-90f51582632d.png:Zone.Identifier  FormattedText-kb0ehjj7.css:Zone.Identifier  a0d9f817-a2a3-493e-851e-14e3c468348a.png:Zone.Identifier  bed80044-55f3-44de-8fd1-7d6c471acc44.png:Zone.Identifier  conversation-small-dextt2zw.css:Zone.Identifier  dcf17772-da08-46fe-842c-a37f5962c30d.png:Zone.Identifier  efaa00fa-7281-45a6-a142-f89bccbf21ff.png:Zone.Identifier  fd80e689-b296-4366-a0fb-0f546975621d.png:Zone.Identifier  root-bpcp30ia.css:Zone.Identifier  saved_resource.html  sora-mutf8tav.webp:Zone.Identifier
tests/config/: test_backup.py  test_recovery.py  test_schema.py  test_writer.py
tests/fixtures/: generic-conversion.json
tests/fixtures/extraction/: ambiguous.html  article.html  documentation.html  generic-article.html
tests/scripts/: test_check_documentation.py  test_check_package_readme.py
