[tool.poetry]
name = "html2md"
version = "0.1.0"
description = "A Python package to convert web pages to markdown"
authors = ["Justin Kindrix <jkindrix@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "html2md", from = "src" }]
classifiers = ["Development Status :: 3 - Alpha"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
beautifulsoup4 = "*"
certifi = "*"
charset-normalizer = "*"
idna = "*"
markdownify = "*"
requests = "*"
six = "*"
soupsieve = "*"
typing-extensions = "*"
urllib3 = "*"
browser-cookie3 = "*"
brotli = "^1.1.0"
jeepney = "*"
lz4 = "*"
pycryptodomex = "*"
python-json-logger = "*"
pyjwt = "*"
google-auth-oauthlib = "1.2.1"
google-auth = "2.38.0"
typer = {version = "^0.15.1", extras = ["all"]}
rich = "^13.7.0"
pycryptodome = "^3.20.0"
pywin32 = {version = "^306", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "^6.1.1"
pre-commit = "*"
black = "25.1.0"
mypy = "1.15.0"
ruff = "0.11.2"
types-requests = "^2.32.0.20250328"

[tool.poetry.scripts]
html2md = "html2md.cli.cli:entry_point"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=append"]

[tool.coverage.run]
source = ["html2md"]
omit = ["*/html2md/tests/*"]

[tool.coverage.report]
fail_under = 59
show_missing = true
skip_covered = true
omit = ["*/html2md/tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
