[tool.poetry]
name = "html2md-cli"
version = "0.2.0"
description = "A Python package to convert web pages to markdown"
authors = ["Justin Kindrix <jkindrix@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "html2md", from = "src" }]
exclude = ["src/html2md/html2md", "src/html2md/tests"]
classifiers = ["Development Status :: 3 - Alpha"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
beautifulsoup4 = "^4.13.4"
markdownify = "^1.1.0"
requests = "^2.32.3"
urllib3 = "^2.4.0"
brotli = "^1.1.0"
pycryptodomex = "^3.22.0"
python-json-logger = "^3.3.0"
typer = "^0.27.0"
rich = "^13.7.0"
playwright = {version = "^1.61.0", optional = true}
pywin32 = {version = "^306", markers = "sys_platform == 'win32'"}
readability-lxml = "^0.8.4.1"
lxml-html-clean = "^0.4.5"

[tool.poetry.extras]
render = ["playwright"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pre-commit = "^4.2.0"
black = "25.1.0"
mypy = "1.15.0"
ruff = "0.11.2"
types-requests = "^2.32.0.20250328"

[tool.poetry.scripts]
html2md = "html2md.cli.cli:entry_point"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=append"]

[tool.coverage.run]
source = ["html2md"]
omit = ["*/html2md/tests/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
omit = ["*/html2md/tests/*"]

[[tool.mypy.overrides]]
module = ["brotli", "markdownify", "playwright.*", "readability"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
