[project]
name = "grab2md"
version = "0.4.1"
description = "Local-first CLI for converting HTML, web pages, batches, and crawls to Markdown"
authors = [{ name = "Justin Kindrix", email = "jkindrix@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = ["html", "markdown", "converter", "crawler", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "beautifulsoup4>=4.13.4,<5.0.0",
    "markdownify>=1.1.0,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "urllib3>=2.4.0,<3.0.0",
    "brotli>=1.1.0,<2.0.0",
    "pycryptodomex>=3.23.0,<4.0.0",
    "python-json-logger>=3.3.0,<4.0.0",
    "typer>=0.27.0,<0.28.0",
    "rich>=13.7.0,<14.0.0",
    "pywin32>=306,<307; sys_platform == 'win32'",
    "readability-lxml>=0.8.4.1,<0.9.0",
    "lxml-html-clean>=0.4.5,<0.5.0",
]

[project.urls]
Repository = "https://github.com/jkindrix/grab2md"
Issues = "https://github.com/jkindrix/grab2md/issues"
Changelog = "https://github.com/jkindrix/grab2md/blob/main/CHANGELOG.md"
Documentation = "https://github.com/jkindrix/grab2md#readme"

[project.optional-dependencies]
render = ["playwright>=1.61.0,<2.0.0"]

[project.scripts]
grab2md = "grab2md.cli.cli:entry_point"

[tool.poetry]
packages = [{ include = "grab2md", from = "src" }]
exclude = ["src/grab2md/tests"]

[tool.poetry.group.dev.dependencies]
pytest = "9.1.1"
pytest-cov = "^7.1.0"
pre-commit = "^4.2.0"
black = "26.5.1"
mypy = "2.3.0"
ruff = "0.15.22"
types-requests = "^2.33.0.20260712"
bandit = "1.9.4"
twine = "6.2.0"
pip-audit = "2.10.1"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=append"]

[tool.coverage.run]
source = ["grab2md"]
omit = ["*/grab2md/tests/*"]
patch = ["subprocess"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
omit = ["*/grab2md/tests/*"]

[tool.black]
target-version = ["py311"]

[[tool.mypy.overrides]]
module = ["brotli", "markdownify", "playwright.*", "readability"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
