[metadata]
name = html2md
version = 1.0.0
description = A Python package to convert webpages to markdown.
author = Justin Kindrix
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
    beautifulsoup4==4.13.3
    certifi==2025.1.31
    charset-normalizer==3.4.1
    idna==3.10
    markdownify==1.0.0
    requests==2.32.3
    six==1.17.0
    soupsieve==2.6
    typing_extensions==4.12.2
    urllib3==2.3.0
    browser_cookie3
    python-json-logger==2.0.7

[options.entry_points]
console_scripts =
    html2md = html2md.cli.main:main

[options.extras_require]
dev =
    pytest
